--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <ul class="menu">
             <li><a href="aframe.html" target="_blank">A-Frame</a></li>
             <li><a href="https://anikaxrdesignanddevelopment.blogspot.com/" target="_blank">Blog</a></li>
+             <li><a href=".hml" target="_blank">Building Your First Lens</a></li>
             <li><a href="https://github.com/Zeequeenbeach/MEDP276" target="_blank">GitHub</a></li>
         </ul>
     </nav>
