--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <ul class="menu">
-            <li><a href="aframe.html" target="_blank">A-Frame</a></li>
+            <li><a href="aframe.html" target="_blank">A-Frame Environment</a></li>
             <li><a href="https://anikaxrdesignanddevelopment.blogspot.com/" target="_blank">Blog</a></li>
-             <li><a href=".hml" target="_blank">Building Your First Lens</a></li>
+            <li><a href="firstlens.zip" download>Lens Studio Work</a></li>
             <li><a href="https://github.com/Zeequeenbeach/MEDP276" target="_blank">GitHub</a></li>
         </ul>
     </nav>
