--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="aframe.html" target="_blank">A-Frame Environment</a></li>
             <li><a href="https://anikaxrdesignanddevelopment.blogspot.com/" target="_blank">Blog</a></li>
             <li><a href="https://lens.snap.com/experience/17093abe-e084-496a-8276-ada954d8138a" target="_blank">Lens Studio Work</a></li>
+            <li><a href="https://lens.snap.com/experience/a8f742b1-7925-4f50-a4c2-eddd4c6d623f" target="_blank">Interactive Lense</a></li>
             <li><a href="https://github.com/Zeequeenbeach/MEDP276" target="_blank">GitHub</a></li>
         </ul>
     </nav>
