--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
         <ul class="menu">
             <li><a href="aframe.html" target="_blank">A-Frame Environment</a></li>
             <li><a href="https://anikaxrdesignanddevelopment.blogspot.com/" target="_blank">Blog</a></li>
-            <li><a href="https://lens.snap.com/experience/17093abe-e084-496a-8276-ada954d8138a" target="_blank">Lens Studio Work</a></li>
-            <li><a href="https://lens.snap.com/experience/5437ef01-8ae3-4932-8a0e-cd5512785155" target="_blank">Interactive Lense</a></li>
+            <li><a href="https://lens.snap.com/experience/17093abe-e084-496a-8276-ada954d8138a" target="_blank">Lens
+                    Studio Work</a></li>
+            <li><a href="https://lens.snap.com/experience/5437ef01-8ae3-4932-8a0e-cd5512785155"
+                    target="_blank">Interactive Lense</a></li>
             <li><a href="https://github.com/Zeequeenbeach/MEDP276" target="_blank">GitHub</a></li>
+            <li><a href="/unity/XR Design and Development Interactive Environment Project Concept.pdf" download>
+                    Interactive Environment Project Concept</a></li>
         </ul>
     </nav>
 
