--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <li><a href="https://github.com/Zeequeenbeach/MEDP276" target="_blank">GitHub</a></li>
             <li><a href="/unity/XR Design and Development Interactive Environment Project Concept.pdf" download>
                     Interactive Environment Project Concept</a></li>
+            <li><a href="https://zeequeenbeach.itch.io/dollhouse" target="_blank">Interactive
+                    Environment</a></li>
         </ul>
     </nav>
 
