--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <li><a href="https://lens.snap.com/experience/5437ef01-8ae3-4932-8a0e-cd5512785155"
                     target="_blank">Interactive Lense</a></li>
             <li><a href="https://github.com/Zeequeenbeach/MEDP276" target="_blank">GitHub</a></li>
-            <li><a href="/unity/XR Design and Development Interactive Environment Project Concept.pdf" download>
+            <li><a href="/unity/XR%20Design%20and%20Development%20Interactive%20Environment%20Project%20Concept.pdf"
+                    download>
                     Interactive Environment Project Concept</a></li>
             <li><a href="https://zeequeenbeach.itch.io/dollhouse" target="_blank">Interactive
                     Environment</a></li>
